# slu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  COPYING  README.md
examples/hello_world/: Slu.toml
examples/slu-compiler-api/: CMakeLists.txt  CMakePresets.json  launch.vs.json  slu-compiler-api.cpp  slu-compiler-api.h
examples/slu-compiler-api/utility/: llvm.natvis  slu.natvis
slu/: Ansi.hpp  BigInt.hpp  BigInt.ixx  CMakeLists.txt  ErrorType.hpp  Include.hpp  LuaBuildTest.cpp  Panic.hpp  Settings.hpp  SluBuildTest.cpp  Utils.hpp  big_int.ixx  char_info.ixx  num.ixx  settings.ixx  test.ixx
slu/_test/: CMakeLists.txt  test.ixx
slu/ast/: CMakeLists.txt  OpMacros.hpp  enums.ixx  make.ixx  mp_data.ixx  op_info.ixx  op_order.ixx  pos.ixx  small_enum_list.ixx  state.ixx  state_decls.ixx  type.ixx
slu/comp/: CMakeLists.txt  CompCfg.hpp  CompInclude.hpp  CompThread.hpp  Compile.hpp  ConvData.hpp  HandleTask.hpp  cfg.ixx  comp.ixx  comp_thread.ixx  compile.ixx  conv_data.ixx  goal of comp.txt  handle_task.ixx
slu/comp/lua/: Conv.hpp
slu/comp/mlir/: Conv.hpp  IncludeMlir.hpp  Pch.hpp  conv.ixx
slu/ext/: CppMatch.hpp  ExtendVariant.hpp  Mtx.hpp  building llvm.txt  mtx.ixx
slu/lang/: BasicState.hpp  CMakeLists.txt  Mpc.hpp  MpcMacros.hpp  basic_state.ixx  mpc.ixx
slu/midlevel/: BasicDesugar.hpp  CMakeLists.txt  MidState.hpp  Operator.hpp  ResolveType.hpp  TypeInfCheck.hpp  goal of this level.txt  resolve_type.ixx
slu/mlir/: CMakeLists.txt  CMakeSettings.json  SluBase.td  SluDialect.cpp  SluDialect.h  SluDialect.td  SluOps.cpp  SluOps.td  build cmds.txt
slu/mlvl/: BasicDesugar.hpp  CMakeLists.txt  TypeInfCheck.hpp  basic_desugar.ixx  hack.ixx  resolve_type.ixx  type_inf_check.ixx
slu/paint/: CMakeLists.txt  Paint.hpp  PaintBasics.hpp  PaintOps.hpp  PaintToHtml.hpp  SemOutputStream.hpp  StyledColorConverter.hpp  basic_col_conv.ixx  basics.ixx  paint.ixx  paint_ops.ixx  sem_output.ixx  to_html.ixx
slu/parse/: BasicGenData.hpp  BuildState.hpp  CMakeLists.txt  Input.hpp  ManageNewline.hpp  Parse.hpp  ResolvedType.hpp  SimpleErrors.hpp  SmallEnumList.hpp  State.hpp  StateDecls.hpp  VecInput.hpp  error.ixx  input.ixx  manage_newl.ixx  parse.ixx  pos.ixx  small_enum_list.ixx  vec_input.ixx
slu/parse/adv/: ReadBlock.hpp  ReadExpr.hpp  ReadExprBase.hpp  ReadName.hpp  ReadNumeral.hpp  ReadPat.hpp  ReadStringLiteral.hpp  ReadTable.hpp  ReadTraitExpr.hpp  ReadTypeExpr.hpp  RecoverFromError.hpp  RequireToken.hpp  SkipSpace.hpp  block.ixx  expr.ixx  expr_base.ixx  expr_decls.ixx  pat.ixx  recover_from_error.ixx  tbl.ixx
slu/parse/basic/: ReadArgs.hpp  ReadBasicStats.hpp  ReadMiscNames.hpp  ReadModStat.hpp  ReadOperators.hpp  ReadStructStat.hpp  ReadUseStat.hpp  args.ixx  fn_ty.ixx  label.ixx  mod_stat.ixx  op.ixx  struct_stat.ixx  trait_expr.ixx  use_stat.ixx
slu/parse/com/: name.ixx  num.ixx  skip_space.ixx  str.ixx  tok.ixx  token.ixx
slu/parse/errors/: CharErrors.h  KwErrors.h  char_errors.ixx  kw.ixx
slu/parse/tests/: ZZZ_concatenated.slu  basicStats.slu  borrow.slu  callTypes.slu  deref.slu  externBlock.slu  fnDecl.slu  forLoopFieldList.slu  genIfCond.slu  ifExpr.slu  implTrait.slu  labelGoto.slu  main_example.slu  messingAround.slu_WIP  modStat.slu  nestPat.slu  noEqStr.slu  numRangeType.slu  numType.slu  operators.slu  prefixUpperify.slu  resTypes.slu  simplePat.slu  tinyFor.$block.slu
slu/parser/: BasicGenData.hpp  BuildState.hpp  Enums.hpp  Input.hpp  OpTraits.hpp  Parse.hpp  Position.hpp  ResolvedType.hpp  SimpleErrors.hpp  SmallEnumList.hpp  State.hpp  StateDecls.hpp  VecInput.hpp
slu/parser/adv/: ReadBlock.hpp  ReadExpr.hpp  ReadExprBase.hpp  ReadName.hpp  ReadNumeral.hpp  ReadPat.hpp  ReadStringLiteral.hpp  ReadTable.hpp  ReadTraitExpr.hpp  ReadTypeExpr.hpp  RecoverFromError.hpp  RequireToken.hpp  SkipSpace.hpp
slu/parser/basic/: CharInfo.hpp  ReadArgs.hpp  ReadBasicStats.hpp  ReadModStat.hpp  ReadOperators.hpp  ReadStructStat.hpp  ReadUseStat.hpp
slu/parser/errors/: KwErrors.h
slu/parser/tests/: ZZZ_concatenated.slu  forLoops.$block.slu  mlCommentOverlap.lua  n0xFFFFFFFFFFFFFFFF.slu  tupName.slu
slu/parser/tests/sl/: ZZZ_concatenated.slu  anyPat.slu  asPat.slu  bigNum.slu  binOpPat.slu  borrow.slu  callTypes.slu  concatenated.slu  deref.slu  exportTest.$block.slu  externBlock.slu  fnDecl.slu  forLoops.slu  ifExpr.slu  implTrait.slu  iu128.slu  letAsType.slu  localArgUse.slu  messingAround.slu_WIP  miscVec.slu  modStat.slu  nestPat.slu  operators.slu  option.slu  parenthesisedPat.slu  prefixUpperify.slu  ptr.slu  rangeAfterAndReturn.$block.slu  ranges.slu  resTypes.slu  simplePat.slu  tinyFor.slu  traitExpr.slu  tupName.slu  typeStats.slu
slu/types/: Converter.hpp
slu/types/complex/: TableKey.hpp
slu/visit/: AnyVisitor.hpp  CMakeLists.txt  Visit.hpp  Visitor.hpp  empty.ixx  visit.ixx
spec/: Lua.txt  annotation.txt  arrayConstructor.txt  arrayMul.txt  as.txt  asExpression.txt  basic.txt  compTodoExpr.txt  comptime.txt  const.txt  constStat.txt  constStatement.txt  do.txt  doExpression.txt  drop.txt  dropStatement.txt  dropping.txt  enumStatement.txt  errors.txt  export.txt  exportPrefix.txt  extern.txt  externBlockStatement.txt  fnExpr.txt  fnStat.txt  fnStatement.txt  for.txt  forLoop.txt  functionStatement.txt  if.txt  ifStatement.txt  implStatement.txt  indexStandard.txt  integerUnderOverFlow.txt  lambda.txt  lambdaExpression.txt  let.txt  letStatement.txt  localStat.txt  logging.txt  (+30 more)
spec/designing-unsure/: axioms.txt  lowLevelTraits.txt  macros.txt  typeState.txt
spec/early/: axioms.txt  copying.txt  doExpression.txt  dropping.txt  errors.txt  implStatement.txt  lowLevelTraits.txt  matchStatement.txt  moving.txt  sendSync.txt  stdBuiltinTypes  stdBuiltinTypes.txt  stdCapabilityTraits.txt  traitStatement.txt
spec/incomplete/: axioms.txt  lowLevelTraits.txt  macros.txt  modules.txt  typeState.txt
spec/info/: CollectSyntax.hpp  LogosTextBgTest.pdn  LogosTextBgTestBlue.pdn  (+9 more)
std/: Slu.toml
test/: CMakeLists.txt  test.cpp  test.ixx
tools/: CMakeLists.txt
webslu/: ast.js  lexer.html  parser.html
(+40 files in other folders)
