
add_library(slu-parse 
	"input.ixx"
	"manage_newl.ixx"
	"error.ixx"
	"errors/char_errors.ixx"
	"errors/kw.ixx"
	"vec_input.ixx"
	"basic/args.ixx"
	"basic/label.ixx"
	"basic/op.ixx"
	"basic/mod_stat.ixx"
	"basic/struct_stat.ixx"
	"basic/use_stat.ixx"
	"com/skip_space.ixx"
	"com/tok.ixx"
	"com/name.ixx"
	"com/num.ixx"
	"com/str.ixx"
)